@@ -184,6 +184,4 @@
 	<roundcube:add_label name="listoptionstitle" />
 </div>
 
-<roundcube:object name="messageimportform" id="uploadform" mode="smart" />
-
 <roundcube:include file="includes/footer.html" />
