@@ -59,6 +59,7 @@ function rcube_elastic_ui()
     this.popup_init = popup_init;
     this.about_dialog = about_dialog;
     this.headers_dialog = headers_dialog;
+    this.import_dialog = import_dialog;
     this.headers_show = headers_show;
     this.spellmenu = spellmenu;
     this.searchmenu = searchmenu;
@@ -2238,8 +2239,7 @@ function rcube_elastic_ui()
 
         dialog = rcmail.simple_dialog(dialog, rcmail.gettext('listoptionstitle'), save_func, {
             closeOnEscape: true,
-            minWidth: 400,
-            width: width
+            minWidth: 400
         });
     };
 
@@ -2261,7 +2261,6 @@ function rcube_elastic_ui()
             button: support_button,
             button_class: 'help',
             cancel_button: 'close',
-            width: 600,
             height: 400
         });
     };
@@ -2285,8 +2284,25 @@ function rcube_elastic_ui()
 
         rcmail.simple_dialog(dialog, rcmail.gettext('arialabelmessageheaders'), null, {
             cancel_button: 'close',
-            width: 600,
             height: 400
+        });
+    };
+
+    /**
+     * Mail import dialog
+     */
+    function import_dialog()
+    {
+        var content = $('#uploadform'),
+            dialog = content.clone();
+
+        var save_func = function(e) {
+            return rcmail.command('import-messages', $(dialog.find('form')[0]));
+        };
+
+        rcmail.simple_dialog(dialog, rcmail.gettext('importmessages'), save_func, {
+            closeOnEscape: true,
+            minWidth: 400
         });
     };
 
